# clipmesh

./: CLAUDE.md  Cargo.toml  README.md  build.sh  clipmesh.service  install.sh
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-12-clipmesh.md  2026-06-13-share-mime-rules.md  2026-06-14-local-selection-bridge.md  2026-06-14-symlink-aware-config-watch.md  2026-06-19-preserve-mime-order.md  2026-06-20-bridge-write-consolidation.md  2026-06-20-sync-config.md  2026-06-21-wl-paste-mode.md
docs/superpowers/specs/: 2026-06-12-clipmesh-design.md  2026-06-13-clipmesh-inprocess-watcher-design.md  2026-06-13-share-mime-rules-design.md  2026-06-14-local-selection-bridge-design.md  2026-06-14-symlinked-config-watch-design.md  2026-06-20-bridge-write-consolidation-design.md  2026-06-20-sync-config-design.md  2026-06-21-wl-paste-mode-design.md
examples/: config.toml  mimetypes
src/: backoff.rs  config.rs  config_template.rs  fsutil.rs  fswatch.rs  lib.rs  main.rs  mesh.rs  mime.rs  node.rs  paste.rs  peer.rs  protocol.rs  sync.rs  transport.rs
src/clipboard/: atoms.rs  io.rs  mock.rs  mod.rs  watch.rs  wayland.rs
tests/: paste.rs  two_nodes.rs
tests/common/: mod.rs
