[package]
name = "clipmesh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = "1.3"
blake3 = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
snow = "0.9"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
wl-clipboard-rs = "0.9"

[dev-dependencies]
tempfile = "3"
